--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <img src="/assets/images/favicon.png" alt="favicon" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
     </div>
     <div>
-      <img src="/assets/images/teatro.jpg" alt="cartaz do teatro joao Dantas" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
+      <img src="/assets/images/teatro-sd.png" alt="cartaz do teatro joao Dantas" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
     </div>
     <div>
       <img src="/assets/images/" alt="image" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
