--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <meta property="og:url" content="https://festeiros2005.pt/">
 <meta property="og:title" content="JovensFesteiros Caranguejeira">
 <meta property="og:description" content="Stand-Up Comedy - Joao Dantas - Auditorio Caranguejeira - 18/06 - 21:00H">
-<meta property="og:image" content="/assets/images/teatro.png">
+<meta property="og:image" content="/assets/images/teatro-sd.png">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -64,7 +64,7 @@
 <meta name="twitter:url" content="https://festeiros2005.pt/">
 <meta name="twitter:title" content="JovensFesteiros Caranguejeira">
 <meta name="twitter:description" content="Stand-Up Comedy - Joao Dantas - Auditorio Caranguejeira - 18/06 - 21:00H">
-<meta name="twitter:image" content="/assets/images/teatro.png">
+<meta name="twitter:image" content="/assets/images/teatro-sd.png">
 
 
 <title>Home</title>
@@ -160,12 +160,6 @@
     </div>
     <div>
       <img src="/assets/images/teatro-sd.png" alt="cartaz do teatro joao Dantas" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
-    </div>
-    <div>
-      <img src="/assets/images/" alt="image" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
-    </div>
-    <div>
-      <img src="/assets/images/" alt="image" style="width: 100%; max-height: 90vh; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); transition: transform 0.3s ease;" />
     </div>
 
   </div>
@@ -347,7 +341,7 @@
 <body>
   <section class="jarallax">
     <video class="bg-video" autoplay muted loop playsinline>
-      <source src="https://cdn.xperia.pt/background1.mp4" type="video/mp4" />
+      <source src="/assets/images/background1.mp4" type="video/mp4" />
     </video>
     <div class="overlay"></div>
     <canvas id="leftCube" class="three-canvas left-cube"></canvas>
@@ -424,7 +418,7 @@
         <div class="card-body p-3">
           <textarea 
             readonly 
-            style="background: url('/assets/images/background1.jpg') no-repeat center center; background-size: cover;width: 100%; height: auto; font-family: Arial, sans-serif; font-size: 16px; resize: none; border: none; background: #fdfdfd; overflow: hidden;">
+            style="background: url('assets/images/background1.jpg') no-repeat center center; background-size: cover;width: 100%; height: auto; font-family: Arial, sans-serif; font-size: 16px; resize: none; border: none; background: #fdfdfd; overflow: hidden;">
 <h2 style="text-align: center; font-size: 30px;">🎉 SANTA EUFÉMIA EM FESTA 2025 🎉</h2>
 <p style="text-align: center; font-size: 18px;">A cargo do lugar das Quintas do Sirol<br>
 <span style="font-weight: bold; font-size: 20px;">📅 19, 20 e 21 de abril</span></p>
@@ -497,7 +491,7 @@
 
 <footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden;">
     <video autoplay loop muted style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-        <source src="https://cdn.xperia.pt/background1.mp4" type="video/mp4">
+        <source src="/assets/images/background1.mp4" type="video/mp4">
     </video>
     <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 1;"></div>
     <div class="container-fluid" style="position: relative; z-index: 2;">
