--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Localização | Santa Eufémia</title>
+  <title>Localização | Auditorio Caranguejeira</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Orbitron:wght@700&display=swap" rel="stylesheet">
@@ -347,7 +347,7 @@
     <canvas id="leftCube" class="three-canvas left-cube"></canvas>
     <canvas id="rightCube" class="three-canvas right-cube"></canvas>
     <div class="map-section animate__animated animate__fadeInUp">
-      <div class="map-title">Contagem para a festa</div>
+      <div class="map-title">Contagem para o espetaculo</div>
       <div id="countdown" class="countdown">00d 00h 00m 00s</div>
       <div class="map-container">
         <iframe
@@ -419,11 +419,9 @@
           <textarea 
             readonly 
             style="background: url('assets/images/background1.jpg') no-repeat center center; background-size: cover;width: 100%; height: auto; font-family: Arial, sans-serif; font-size: 16px; resize: none; border: none; background: #fdfdfd; overflow: hidden;">
-<h2 style="text-align: center; font-size: 30px;">🎉 SANTA EUFÉMIA EM FESTA 2025 🎉</h2>
-<p style="text-align: center; font-size: 18px;">A cargo do lugar das Quintas do Sirol<br>
-<span style="font-weight: bold; font-size: 20px;">📅 19, 20 e 21 de abril</span></p>
-
-<p>Vem celebrar connosco a tradicional festa em honra de Nossa Senhora da Conceição e de Cristo Ressuscitado, com um fim de semana cheio de música, tradição e muita animação! ✨</p>
+<h2 style="text-align: center; font-size: 30px;
+<p style="text-align: center; font-size: 18px;"
+<span style="font-weight: bold; font-size: 20px;"
 
 <h3>🔥 Programa:</h3>
 
