--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             <li class="nav-item"><a class="nav-link link show text-primary display-4" href="https://www.facebook.com/profile.php?id=100092446081568" target="_blank">
                 <img src="https://cdn.xperia.pt/Facebook_f_logo_(2019).svg" alt="Facebook" style="width: 42px; height: 42px;">
             <li class="nav-item">
+               <li class="nav-item"><a class="nav-link link show text-primary display-4" href="https://www.instagram.com/jovensfesteiros2005/" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="instagram" style="width: 42px; height: 42px;">
+            <li class="nav-item">
             </li>
           </ul>
         </div>
