--- a/index.html
+++ b/index.html
@@ -507,21 +507,6 @@
         </div>
     </div>
 </section>
-  
-<div class="share-bar">
-  <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp">
-    <i class="bi bi-whatsapp"></i>
-  </a>
-  <a href="https://www.facebook.com/sharer/sharer.php?u=https://festeiros2005.pt" target="_blank" class="share-icon facebook">
-    <i class="bi bi-facebook"></i>
-  </a>
-  <a href="https://m.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon messenger">
-    <i class="bi bi-messenger"></i>
-  </a>
-  <a href="https://www.instagram.com/?url=https://festeiros2005.pt" target="_blank" class="share-icon instagram">
-    <i class="bi bi-instagram"></i>
-  </a>
-</div>
 
 <footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden;">
     <video autoplay loop muted style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
@@ -545,6 +530,21 @@
     </div>
 </footer>
 
+       <div class="share-bar">
+  <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp">
+    <i class="bi bi-whatsapp"></i>
+  </a>
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https://festeiros2005.pt" target="_blank" class="share-icon facebook">
+    <i class="bi bi-facebook"></i>
+  </a>
+  <a href="https://m.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon messenger">
+    <i class="bi bi-messenger"></i>
+  </a>
+  <a href="https://www.instagram.com/?url=https://festeiros2005.pt" target="_blank" class="share-icon instagram">
+    <i class="bi bi-instagram"></i>
+  </a>
+</div>          
+                 
 <!-- core scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -580,7 +580,7 @@
       photoViewer.style.alignItems = "center";
 
       // Optional: Log a message to confirm the background was set
-      console.log('Vai mas é tocar na erva bro.');
+      console.log('FODASSE OS ERROS.');
     }
   });
 </script>
@@ -599,7 +599,7 @@
       adaptiveHeight: true,
     });
 
-    // Simple zoom on hover (for panzoom, a more complex plugin is needed)
+    // Simple zoom on hover 
     $('.slick-carousel img').hover(
       function() {
         $(this).css('transform', 'scale(1.2)');
