--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
   <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="assets/js/resizer.js"></script>
   
 </head>
 
