--- a/index.html
+++ b/index.html
@@ -504,6 +504,11 @@
                         
                         
                         <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-info display-4">Enviar</button></div>
+                      <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
+                        <a href="tel:932962753" class="btn btn-info display-4" style="margin-right: 10px;">Ligar 932 962 753</a>
+                        <a href="tel:915355533" class="btn btn-success display-4">Ligar 915 355 533</a>
+                      </div>
+
                     </div>
                 </form>
             </div>
