--- a/index.html
+++ b/index.html
@@ -483,19 +483,22 @@
 <p>🍽 exemplo exemplo!</p>
 -->
 
-<section data-bs-version="5.1" class="form5 cid-uMuP3U6Ow8" id="form5-0">
-  <div class="mbr-overlay"></div>
-  <div class="container">
-    <div class="mbr-section-head text-center mb-4">
-      <h3 class="mbr-section-title mbr-fonts-style display-2">
-        <strong>Peça <em>Bilhete</em> Aqui!</strong>
+
+<section data-bs-version="5.1" class="form5 cid-uMuP3U6Ow8 py-5" id="form5-0" style="background: url('/assets/images/background1.jpg') center center / cover no-repeat; position: relative;">
+  <div class="mbr-overlay" style="background-color: rgba(0, 0, 0, 0.5); position: absolute; inset: 0; z-index: 1;"></div>
+
+  <div class="container position-relative z-2 text-white">
+    <div class="mbr-section-head text-center mb-5">
+      <h3 class="mbr-section-title mbr-fonts-style display-4 fw-bold">
+        Peça <em>Bilhete</em> Aqui!
       </h3>
     </div>
+
     <div class="row justify-content-center">
       <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name">
-          <input type="hidden" name="email" data-form-email="true" value="huxAhhDgW3OR51q4klzSaBvJtcGzF6zH6x4QvY2o4X4eKG1Bu2e3MQsf5L5JzbuXGW2kKHTEKGlg2qfhdjYSHVCgr/g3VpvJYiqE9wYOUDqrn5Mpk4hbE0StY9wgYRa8">
-          
+        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler bg-white p-4 p-md-5 rounded shadow-lg" data-form-title="Form Name">
+          <input type="hidden" name="email" data-form-email="true" value="...">
+
           <div class="row">
             <div hidden data-form-alert class="alert alert-success col-12">
               Pedido de Bilhete Enviado!
@@ -512,7 +515,6 @@
                 <label for="name-form5-0">Nome</label>
               </div>
             </div>
-
             <div class="col-md-6">
               <div class="form-floating">
                 <input type="email" name="email" class="form-control" id="email-form5-0" placeholder="E-mail" data-form-field="email" required>
@@ -522,24 +524,24 @@
           </div>
 
           <div class="text-center mb-3">
-            <button type="submit" class="btn btn-primary px-5">Enviar</button>
+            <button type="submit" class="btn btn-warning px-5 py-2 text-dark fw-semibold shadow-sm">
+              Enviar
+            </button>
           </div>
 
           <div class="text-center">
-            <a href="tel:932962753" class="btn btn-outline-info me-2 mb-2">
+            <a href="tel:932962753" class="btn btn-outline-light me-2 mb-2">
               📞 Ligar 932 962 753
             </a>
-            <a href="tel:915355533" class="btn btn-outline-success mb-2">
+            <a href="tel:915355533" class="btn btn-outline-light mb-2">
               📞 Ligar 915 355 533
             </a>
           </div>
-
         </form>
       </div>
     </div>
   </div>
 </section>
-
 
 <footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden;">
     <video autoplay loop muted style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
