--- a/index.html
+++ b/index.html
@@ -483,10 +483,6 @@
 <p>🍽 exemplo exemplo!</p>
 -->
 
-
-<!-- Add this in your <head> if not already included -->
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600&display=swap" rel="stylesheet">
-
 <section data-bs-version="5.1" class="form5 cid-uMuP3U6Ow8 py-5" id="form5-0" style="background: url('/assets/images/background1.jpg') center center / cover no-repeat; position: relative; font-family: 'Fredoka', cursive;">
   <div class="mbr-overlay" style="background-color: rgba(0, 0, 0, 0.4); position: absolute; inset: 0; z-index: 1;"></div>
 
@@ -500,7 +496,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
         <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler p-0" data-form-title="Form Name">
-          <input type="hidden" name="email" data-form-email="true" value="...">
+          <input type="hidden" name="email" data-form-email="true" value="BFF4g8gVRC7p29OjjGML+/v2gHEVjg2YoTzm3ulhvNe4f4fLhtFvzIWOMe9OuKS+qNOPExgkI5aEP6H+RUKMB8ATKFSY3kVL5ZiLMKzDLeD2OPnR27BxO1wBhNrdqVJG">
 
           <div class="row">
             <div hidden data-form-alert class="alert alert-success col-12">
