--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="assets/js/media-handler.js"></script>
-
+<script src="assets/js/particles.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     // Get the photo viewer element
