--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@
 -->
 
 
+  <!-- Classic footer
 <footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden;">
     <video autoplay loop muted style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="/assets/images/background1.mp4" type="video/mp4">
@@ -566,6 +567,48 @@
         </div>
     </div>
 </footer>
+-->
+
+<footer id="footer1-2">
+  <!-- Three.js canvas for particles -->
+  <canvas id="particles-canvas"></canvas>
+
+  <div class="footer-content">
+    <p>
+      &copy; 2025 
+      <a href="https://festeiros2005.pt" target="_blank" rel="noopener noreferrer">festeiros2005.pt</a>
+    </p>
+    <p>
+      Made with 
+      <span class="heart" aria-label="heart" role="img">&#10084;</span> 
+      by Diogo Cardoso
+    </p>
+
+    <!-- Share Bar -->
+    <div class="share-bar">
+      <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp" aria-label="WhatsApp Share">
+        <i class="bi bi-whatsapp"></i>
+      </a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://festeiros2005.pt" target="_blank" class="share-icon facebook" aria-label="Facebook Share">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://m.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon messenger" aria-label="Messenger Share">
+        <i class="bi bi-messenger"></i>
+      </a>
+      <a href="https://www.instagram.com/?url=https://festeiros2005.pt" target="_blank" class="share-icon instagram" aria-label="Instagram Share">
+        <i class="bi bi-instagram"></i>
+      </a>
+    </div>
+  </div>
+
+  <!-- Include Bootstrap Icons CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+  <!-- Include Three.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <script src="footer-particles.js"></script>
+</footer>
+
 
        <div class="share-bar">
   <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp">
