--- a/index.html
+++ b/index.html
@@ -555,8 +555,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <p class="mbr-text mbr-fonts-style display-4" style="color: white; font-weight: bold; font-size: 24px;">
-                    Copyright festeiros2005.pt 2025 | 
-                    <span>Made with ❤️ by Diogo Cardoso </span>
+                    Copyright festeiros2005.pt 2025 </span>
             </div>
         </div>
     </div>       
