--- a/index.html
+++ b/index.html
@@ -135,24 +135,22 @@
           </div>
         </button>
         
-          <!-- Navbar Links -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+            <!-- Navbar Links -->
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
 
-              <li class="nav-item">
-                <a class="nav-link link show text-primary display-4" href="https://www.facebook.com/profile.php?id=100092446081568" target="_blank" rel="noopener noreferrer">
-                  <img src="https://cdn.xperia.pt/Facebook_f_logo_(2019).svg" alt="Facebook" style="width: 42px; height: 42px;">
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link link show text-primary display-4" href="https://www.instagram.com/jovensfesteiros2005/" target="_blank" rel="noopener noreferrer">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="Instagram" style="width: 42px; height: 42px;">
-                </a>
-              </li>
-
-            </ul>
-          </div>
+                        <li class="nav-item"><a class="nav-link link show text-primary display-4" href="https://www.facebook.com/profile.php?id=100092446081568" target="_blank">
+                            <img src="https://cdn.xperia.pt/Facebook_f_logo_(2019).svg" alt="Facebook" style="width: 42px; height: 42px;">
+                        <li class="nav-item">
+                          <li class="nav-item"><a class="nav-link link show text-primary display-4" href="https://www.instagram.com/jovensfesteiros2005/" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="instagram" style="width: 42px; height: 42px;">
+                        <li class="nav-item">
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </nav>
+              </section>
 
 
 <!-- Slick Carousel Wrapper -->
@@ -181,15 +179,17 @@
 </div>
 
 
-<section data-bs-version="5.1" class="form5 cid-uMuP3U6Ow8 py-5" id="form5-0" style="background: url('/assets/images/background1.jpg') center center / cover no-repeat; position: relative; font-family: 'Fredoka', cursive;">
-  <div class="mbr-overlay" style="background-color: rgba(0, 0, 0, 0.4); position: absolute; inset: 0; z-index: 1;"></div>
+        <section data-bs-version="5.1" class="form5 cid-uMuP3U6Ow8 py-5" id="form5-0" style="background: url('/assets/images/background1.jpg') center center / cover no-repeat; position: relative; font-family: 'Fredoka', cursive;">
+          <div class="mbr-overlay" style="background-color: rgba(0, 0, 0, 0.4); position: absolute; inset: 0; z-index: 1;"></div>
 
-  <div class="container position-relative z-2 text-black">
-    <div class="mbr-section-head text-center mb-5">
-      <h3 class="mbr-section-title display-4 fw-bold">
-        Peça <em>Bilhete</em> Aqui!
-      </h3>
-    </div>
+        <div class="container d-flex justify-content-center align-items-center text-center text-black" style="min-height: 100vh;">
+          <div>
+            <h3 class="display-4 fw-bold">
+              Peça <em>Bilhete</em> Aqui!
+            </h3>
+          </div>
+        </div>
+
 
     <div class="row justify-content-center">
       <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
