--- a/index.html
+++ b/index.html
@@ -135,22 +135,24 @@
           </div>
         </button>
         
-            <!-- Navbar Links -->
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+          <!-- Navbar Links -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
 
-                        <li class="nav-item"><a class="nav-link link show text-primary display-4" href="https://www.facebook.com/profile.php?id=100092446081568" target="_blank">
-                            <img src="https://cdn.xperia.pt/Facebook_f_logo_(2019).svg" alt="Facebook" style="width: 42px; height: 42px;">
-                        <li class="nav-item">
-                          <li class="nav-item"><a class="nav-link link show text-primary display-4" href="https://www.instagram.com/jovensfesteiros2005/" target="_blank">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="instagram" style="width: 42px; height: 42px;">
-                        <li class="nav-item">
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
-              </section>
+              <li class="nav-item">
+                <a class="nav-link link show text-primary display-4" href="https://www.facebook.com/profile.php?id=100092446081568" target="_blank">
+                  <img src="https://cdn.xperia.pt/Facebook_f_logo_(2019).svg" alt="Facebook" style="width: 42px; height: 42px;">
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link link show text-primary display-4" href="https://www.instagram.com/jovensfesteiros2005/" target="_blank">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="Instagram" style="width: 42px; height: 42px;">
+                </a>
+              </li>
+
+            </ul>
+          </div>
 
 
 <!-- Slick Carousel Wrapper -->
@@ -226,14 +228,7 @@
             </button>
           </div>
 
-          <div class="text-center">
-            <a href="tel:932962753" class="btn btn-outline-light me-2 mb-2 fw-bold">
-              📞 Ligar 932 962 753
-            </a>
-            <a href="tel:915355533" class="btn btn-outline-light mb-2 fw-bold">
-              📞 Ligar 915 355 533
-            </a>
-          </div>
+
         </form>
       </div>
     </div>
