--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
             <h3 class="display-4 fw-bold">
               Peça <em>Bilhete</em> Aqui!
             </h3>
+                <h3 class="display-4 fw-bold">
+              👇👇👇
+                </h3>
           </div>
         </div>
 
