--- a/index.html
+++ b/index.html
@@ -144,13 +144,21 @@
                   <img src="https://cdn.xperia.pt/Facebook_f_logo_(2019).svg" alt="Facebook" style="width: 42px; height: 42px;">
                 </a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link link show text-primary display-4" href="https://www.instagram.com/jovensfesteiros2005/" target="_blank">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="Instagram" style="width: 42px; height: 42px;">
                 </a>
               </li>
-
+                <li class="nav-item">
+          <div class="text-center">
+            <a href="tel:932962753" class="btn btn-outline-light me-2 mb-2 fw-bold">
+              📞 Ligar 932 962 753
+            </a>
+            <a href="tel:915355533" class="btn btn-outline-light mb-2 fw-bold">
+              📞 Ligar 915 355 533
+            </a>
+          </div>
+              </li>
             </ul>
           </div>
     </section>
@@ -236,6 +244,16 @@
         </form>
       </div>
     </div>
+
+      <div class="text-center">
+        <a href="tel:932962753" class="btn btn-outline-light me-2 mb-2 fw-bold">
+          📞 Ligar 932 962 753
+        </a>
+        <a href="tel:915355533" class="btn btn-outline-light mb-2 fw-bold">
+          📞 Ligar 915 355 533
+        </a>
+      </div>
+
   </div>
 </section>
 
@@ -610,9 +628,9 @@
       dots: true,
       infinite: true,
       autoplay: true,
-      autoplaySpeed: 3000,
+      autoplaySpeed: 4000,
       adaptiveHeight: true,
-      fade: false, // Optional: set to true for fade effect
+      fade: true, 
       cssEase: 'ease'
     });
 
