--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   </div>
 </section>
 
-  <!--
+  <!-- If {video}:
 
 <section data-bs-version="5.1" class="video05 cid-uHSKsATDc7 mbr-parallax-background" id="video05-4">
   <div class="container-fluid">
@@ -277,12 +277,12 @@
         <video id="main-video" class="foreground-video" autoplay loop playsinline controls>
           <source src="https://example.com" type="video/mp4">
         </video>
--->
+
       </div>
     </div>
   </div>
 </section>
-
+-->
 
 
 
@@ -298,7 +298,7 @@
 
   <iframe
   class="w-full h-full border-none"
-  style="width: 100vw; height: 100vh; border: none;"
+  style="width: 100vw; height: 125vh; border: none;"
   allowfullscreen
   loading="lazy"
   referrerpolicy="no-referrer-when-downgrade"
@@ -312,7 +312,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Orbitron:wght@700&display=swap" rel="stylesheet">
-  <link href="https://festeiros2005.pt/assets/css/iframe.css" rel="stylesheet">
+  <link href="assets/css/iframe.css" rel="stylesheet">
+  <script src="assets/js/clock.js"></script>
+  <script src="assets/js/cubes.js"></script>
 </head>
 <body>
   <section class="jarallax">
@@ -340,68 +342,7 @@
 </html>'>
 </iframe>
 
-  <!--
-<div class="container my-5">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-10 col-lg-8">
-      <div class="card shadow-sm border-0 rounded">
-        <div class="card-body p-3">
-          <textarea 
-            readonly 
-            style="background: url('assets/images/background1.jpg') no-repeat center center; background-size: cover;width: 100%; height: auto; font-family: Arial, sans-serif; font-size: 16px; resize: none; border: none; background: #fdfdfd; overflow: hidden;">
-<h2 style="text-align: center; font-size: 30px;
-<p style="text-align: center; font-size: 18px;
-
-
-<h3> Programa:</h3>
-
-<h4><span style="font-weight: bold; font-size: 20px;">📆 SEXTA, 18 de julho</span></h4>
-<ul>
-  <li>🕤 21:00 - João Dantas - StandUP Comedy</li>
-</ul>
-
-<p><br>
-<p📣 Traz a família, convida os amigos e vem viver este grande espetáculo!</p>
-
-          </textarea>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<h4><span style="font-weight: bold; font-size: 20px;">📆 DOMINGO, 20 de abril</span></h4>
-<ul>
-  <li>🕘 09:00 - Alvorada</li>
-  <li>🕙 10:15 - Missa</li>
-  <li>🕓 16:00 - Morais Dance Studio</li>
-  <li>🕠 17:30 - Rancho Folclórico dos Soutos da Caranguejeira</li>
-  <li>🕘 21:00 - Métodos A Soro</li>
-  <li>🕥 22:30 - Némanus</li>
-  <li>🕛 00:00 - Espetáculo surpresa</li>
-  <li>🕧 00:30 - Rolando Kruz + Pedro Lothar</li>
-</ul>
-
-<h4><span style="font-weight: bold; font-size: 20px;">📆 SEGUNDA, 21 de abril</span></h4>
-<ul>
-  <li>🕘 09:30 - Alvorada + Gaiteiros</li>
-  <li>🕐 13:00 - Chegada da Filarmónica dos Marrazes</li>
-  <li>🕑 14:00 - Procissão</li>
-  <li>🕒 15:00 - Missa e procissão</li>
-  <li>🕔 17:00 - Entrega da bandeira</li>
-  <li>🕕 18:00 - Farratuga</li>
-  <li>🕘 21:00 - Inês Apenas</li>
-  <li>🕦 23:30 - Calema</li>
-  <li>🎆 Meia-noite - Fogo de artifício</li>
-  <li>🎁 Sorteio</li>
-  <li>🕐 01:00 - Nuno Carreira e Carlos Romão</li>
-</ul>
-
-<p>🍽 exemplo exemplo!</p>
--->
-
-
+  
 
 <footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden;">
     <video autoplay loop muted style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
