--- a/index.html
+++ b/index.html
@@ -9,21 +9,6 @@
 <meta name="description" content=" Jovens Festeiros 2005 Caranguejeira">
 
 <!-- DNS Prefetch and Preconnect -->
-<!--
-<link rel="dns-prefetch" href="https://cdn.xperia.pt">
-<link rel="preconnect" href="https://cdn.xperia.pt" crossorigin>
-
-<link rel="dns-prefetch" href="https://cdn1.xperia.pt">
-<link rel="preconnect" href="https://cdn1.xperia.pt" crossorigin>
-
-<link rel="dns-prefetch" href="https://cdn-dia1.xperia.pt">
-<link rel="preconnect" href="https://cdn-dia1.xperia.pt" crossorigin>
-
-<link rel="dns-prefetch" href="https://cdn-dia2.xperia.pt">
-<link rel="preconnect" href="https://cdn-dia2.xperia.pt" crossorigin>
--->
-<link rel="dns-prefetch" href="https://cdn.tiny.cloud">
-<link rel="preconnect" href="https://cdn.tiny.cloud" crossorigin>
 
 <link rel="dns-prefetch" href="//www.google.com">
 <link rel="preconnect" href="https://www.google.com" crossorigin>
@@ -39,9 +24,6 @@
 
 <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
 <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-
-<link rel="dns-prefetch" href="">
-<link rel="preconnect" href="" crossorigin>
 
 <link rel="dns-prefetch" href="static.cloudflareinsights.com">
 <link rel="preconnect" href="https://static.cloudflareinsights.com" crossorigin>
@@ -82,7 +64,6 @@
   <link rel="stylesheet" href="assets/parallax/jarallax.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/css/share-bar-footer.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css" type="text/css">
 
  <!-- custom css/JS -->
@@ -378,7 +359,7 @@
 </footer>
 
 
-       <div class="share-bar-footer">
+       <div class="share-bar">
           <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp">
             <i class="bi bi-whatsapp"></i>
           </a>
