--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     }
     updateCountdown();
     setInterval(updateCountdown, 1000);
-    <script>
+  </script>
 </body>
 </html>'>
 </iframe>
