--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
  <!-- custom css/JS -->
   <link rel="stylesheet" href="assets/css/index-custom.css">
+    <link rel="stylesheet" href="assets/css/form.css">
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
  <!-- core remote css -->
@@ -172,71 +173,57 @@
   </div>
 </div>
 
+<section class="ticket-section py-5" style="background: url('/assets/images/background1.jpg') center/cover no-repeat; position: relative; font-family: 'Fredoka', cursive;">
+  <div class="overlay"></div>
 
-        <section data-bs-version="5.1" class="form5 cid-uMuP3U6Ow8 py-5" id="form5-0" style="background: url('/assets/images/background1.jpg') center center / cover no-repeat; position: relative; font-family: 'Fredoka', cursive;">
-          <div class="mbr-overlay" style="background-color: rgba(0, 0, 0, 0.4); position: absolute; inset: 0; z-index: 1;"></div>
-
-        <div class="container d-flex justify-content-center align-items-center text-center text-black" style="min-height: 30vh;">
-          <div>
-            <h3 class="display-4 fw-bold">
-              Peça <em>Bilhete</em> Aqui!
-            </h3>
-                <h3 class="display-4 fw-bold">
-              👇👇👇
-                </h3>
-          </div>
-        </div>
-
+  <div class="container text-center text-white position-relative z-2">
+    <h3 class="display-4 fw-bold mb-3">Peça <em>Bilhete</em> Aqui!</h3>
+    <h3 class="display-4 fw-bold mb-4">👇👇👇</h3>
 
     <div class="row justify-content-center">
-      <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler p-0" data-form-title="Form Name">
-          <input type="hidden" name="email" data-form-email="true" value="BFF4g8gVRC7p29OjjGML+/v2gHEVjg2YoTzm3ulhvNe4f4fLhtFvzIWOMe9OuKS+qNOPExgkI5aEP6H+RUKMB8ATKFSY3kVL5ZiLMKzDLeD2OPnR27BxO1wBhNrdqVJG">
+      <div class="col-lg-8">
+        <form action="https://mobirise.eu/" method="POST" class="glass-form p-4 rounded-4 shadow-lg" data-form-title="Form Name">
+          <input type="hidden" name="email" data-form-email="true" value="...">
 
-          <div class="row">
-            <div hidden data-form-alert class="alert alert-success col-12">
-              Pedido de Bilhete Enviado!
-            </div>
-            <div hidden data-form-alert-danger class="alert alert-danger col-12">
-              Oops...! algum problema!
-            </div>
+          <div hidden data-form-alert class="alert alert-success text-center fw-bold">
+            Pedido de Bilhete Enviado!
+          </div>
+          <div hidden data-form-alert-danger class="alert alert-danger text-center fw-bold">
+            Oops...! Algum problema!
           </div>
 
-          <div class="row g-3 mb-4">
+          <div class="row g-4 mb-3">
             <div class="col-md-6">
               <div class="form-floating">
-                <input type="text" name="name" class="form-control bg-transparent text-black fw-bold border-dark" id="name-form5-0" placeholder="Nome" data-form-field="name" required>
-                <label for="name-form5-0" class="text-dark fw-bold">Nome</label>
+                <input type="text" name="name" class="form-control thick-border bg-transparent text-white fw-bold" id="name" placeholder="Nome" required>
+                <label for="name" class="text-white">Nome</label>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-floating">
-                <input type="email" name="email" class="form-control bg-transparent text-black fw-bold border-dark" id="email-form5-0" placeholder="E-mail" data-form-field="email" required>
-                <label for="email-form5-0" class="text-dark fw-bold">E-mail</label>
+                <input type="email" name="email" class="form-control thick-border bg-transparent text-white fw-bold" id="email" placeholder="E-mail" required>
+                <label for="email" class="text-white">E-mail</label>
               </div>
             </div>
           </div>
 
-          <div class="text-center mb-3">
-            <button type="submit" class="btn btn-warning px-5 py-2 text-dark fw-bold shadow-sm">
-              Enviar
+          <div class="text-center">
+            <button type="submit" class="btn btn-warning btn-lg px-5 fw-bold rounded-pill shadow hover-scale">
+              ✉️ Enviar Pedido
             </button>
           </div>
-
-
         </form>
       </div>
     </div>
 
-      <div class="text-center">
-        <a href="tel:932962753" class="btn btn-outline-light me-2 mb-2 fw-bold">
-          📞 Ligar 932 962 753
-        </a>
-        <a href="tel:915355533" class="btn btn-outline-light mb-2 fw-bold">
-          📞 Ligar 915 355 533
-        </a>
-      </div>
-
+    <div class="mt-4">
+      <a href="tel:932962753" class="btn call-btn me-2 mb-2">
+        📞 Ligar 932 962 753
+      </a>
+      <a href="tel:915355533" class="btn call-btn mb-2">
+        📞 Ligar 915 355 533
+      </a>
+    </div>
   </div>
 </section>
 
