--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <form action="https://mobirise.eu/" method="POST" class="glass-form p-4 rounded-4 shadow-lg" data-form-title="Form Name">
-          <input type="hidden" name="email" data-form-email="true" value="Qm1oP39uSSq/FNSnUVQiS7Qhaz1pvrlZ+9GzcvnXN8KiRM5PIxRM0sLXTbQs3SKRQxVLc+xF5v9mEG1VX1dj37w18SVxN3Ry2BULTzJbnxQboGVCUhhLve+aMgy1v0wk">
+        <form action="https://formsubmit.co/diogopontecardoso@gmail.com" method="POST" class="glass-form p-4 rounded-4 shadow-lg" data-form-title="Form Name">
+          <input type="hidden" name="email" data-form-email="true" >
 
           <div hidden data-form-alert class="alert alert-success text-center fw-bold">
             Pedido de Bilhete Enviado!
