--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@
     <h3 class="display-4 fw-bold mb-4">👇👇👇</h3>
 
     <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <form action="https://formsubmit.co/diogopontecardoso@gmail.com" method="POST" class="glass-form p-4 rounded-4 shadow-lg" data-form-title="Form Name">
-          <input type="hidden" name="email" data-form-email="true" >
-
+            <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
+        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="dMLUIQf5gQgijDWVqbI/DkAEYaIebuEgUAWCbq6ErB2BaJN8SrDFflPnl+Epf0LInDqiuAO+9xz/LZlC9x6YZGukyZJg1kSDjN4+7LNNzc1G+7Sv/NrjBHcIuLvTRaql">
+        <!--<form action="https://formsubmit.co/diogopontecardoso@gmail.com" method="POST" class="glass-form p-4 rounded-4 shadow-lg" data-form-title="Form Name">-->
           <div hidden data-form-alert class="alert alert-success text-center fw-bold">
             Pedido de Bilhete Enviado!
           </div>
