--- a/index.html
+++ b/index.html
@@ -179,15 +179,10 @@
     <h3 class="display-4 fw-bold mb-3">Peça <em>Bilhete</em> Aqui!</h3>
     <h3 class="display-4 fw-bold mb-4">👇👇👇</h3>
 
-    <div class="row justify-content-center">
-      <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-        <form 
-          action="https://formsubmit.co/diogopontecardoso@gmail.com" 
-          method="POST" 
-          class="mbr-form form-with-styler needs-validation glass-form p-4 rounded-4 shadow-lg border border-light-subtle" 
-          novalidate 
-          data-form-title="Formulário de Pedido de Bilhete"
-        >
+         <div class="row justify-content-center mt-4">
+            <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="xFu8/M95LWJ51SzDDQi/+D5ttHwamdn7B3i6Y/AS3/hUL1tcygJBfBEyxtDuqnhy52TJD6W30HE3A7I2bnwlfQgE3TcjCU55fuZocAogm4oEkw6rlt19T8AjSnFATPHY">
+                    <div class="row">
           <!-- HONEYPOT (spam prevention) -->
           <input type="text" name="_honey" style="display:none">
           <input type="hidden" name="_captcha" value="false">
